--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
 <head>
-<title>CiviCRM member query tool</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CiviCRM member query tool</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body>
 <h1>CiviCRM member query tool</h1>
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 
 <form>
 <div class="rendered-form">
